2014-10-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use SRFI 1 instead of (ice-9 common-list).

	* types-table.scm: Don't import ‘(ice-9 common-list)’;
	instead, import ‘(srfi srfi-1)’.

2014-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add "make check" option ‘VERBOSE=1’.

	* testing.scm <load-time actions>: If env var ‘VERBOSE’
	has value "1", arrange to send stdout to the null device.

2014-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Check well-formedness of types table cache.

	* types-table.scm (test:query-oid/type-name): ...here;
	also, ‘pg-finish’ the temporary connection when done.

2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Overcome PostgreSQL 9.3 "CREATE TABLE .. serial" reticence.

	* basic.scm (test:set-notice-out!-1 cmm): New proc.
	(test:set-notice-out!-1): Set ‘client_min_messages’
	to ‘basic1’ around call to ‘tmp-table’.

2014-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Handle PostgreSQL 9.3 config var ‘unix_socket_directories’.

	* fake-cluster-control (1): ...here, via regexp.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Move "fake-cluster-control 1" invocation to runtest.

	* runtest.in: Invoke "fake-cluster-control 1" here.
	* Makefile.am (check_DATA): Remove fake-cluster/postmaster.pid.
	(fake-cluster/postmaster.pid): Delete target.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add "make drop-database".

	* fake-cluster-control (d): New.
	* Makefile.am (drop-database): New target.

2014-01-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Create database exactly once, after daemon up.

	* fake-cluster-control (hopefully):
	Use ‘return’, not ‘exit’ on success.
	(1): Use ‘truly_down’ and convert early ‘exit’ to conditional
	block around daemon up commands; add commands to check for,
	and create if necessary, database ‘guile_pg_test’.
	* basic.scm: Remove all calls to ‘fresh!’ and ‘drop!’.
	* large.scm: Likewise.
	* meta.scm: Likewise.
	* types-table.scm: Likewise.